2013-07-09 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinypath.el: Update comments. Shuffle statement order in
	`eval-and-compile'.

2013-06-14 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-setup): New. Handle
	Emacs compatibility.

2013-06-13 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (top level): require elp for Byte compiler.
	(tinylisp-find-variable-list): Use `custom-variable-p'.
	(tinylisp-forward-user-option): Use `custom-variable-p'.
	(tinylisp-snoop-variables): Change to `cl-remprop'.

	* tiny/tinyigrep.el (top level): Adjust union autoload.
	(tinyigrep-main-read-args): Don't quote lambda.

	* tiny/load-path.el (require): require cl only compile time.

	* ALL: Replace all files to use `call-interactively-p',
	`cl-flet' 24.3.

	* tiny/tinylibb.el (called-interactively-p): pre 23.2 emulation.

	* tiny/tinymy.el (tinymy--compile-table): Remove `aput'.

	* tiny/tinytf.el: devel (top level): Fix typo in comment.

	* tiny/tinyprocmail.el: (top level::coment): Remove `aput'.

	* tiny/tinypath.el
	(top level): Remove assoc.el, assq is now built-in.
	(tinypath-time-record): Replace `aput.

	* tiny/tinygnus.el (tinygnus-gnus-debug-update-nnml-group-alist):
	Replace `aput'.

	* tiny/tinyscroll.el: Replace `adelete' call.

	* tiny/tinyliby.el (top level): Remove assoc.el require.
	(ti::system-feature-kill): Delete `adelete'.

	* tiny/tinyliba.el: Delete assoc.el autoloads.

	* tiny/tinymail.el: Update comment and remove `aput' which has
	been removed in Emacs 24.2; no more assoc.el.
	(tinymail-install-table-header-complete-gnus): Remove `aput'.

2013-05-28 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinysearch.el (tinysearch-install-default-keybindings): Check
	Mouse bindings before insall.

2013-05-22 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-bug-number-pure-p): New.
	(tinydebian-debian-bug-info-macro): Use
	`tinydebian-bts-bug-number-pure-p'.